flutter/packages/slint_skia/rust/include/slint_skia_ffi.h

#ifndef SLINT_SKIA_FFI_H
#define SLINT_SKIA_FFI_H

/* GENERATED by cbindgen from src/lib.rs, do not edit. Regenerate: cd packages/slint_skia/rust && cbindgen --output include/slint_skia_ffi.h */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * The error of the last failed call on this thread, or null. Every entry
 * point clears it first. Caller frees with [slint_skia_string_free].
 */
char *slint_skia_last_error(void);

void slint_skia_string_free(char *s);

void *slint_skia_engine_new(void);

void slint_skia_engine_free(void *engine);

/**
 * Compiles `source` (resolving imports relative to `path`) and returns its
 * one exported component; free with [slint_skia_definitions_free].
 */
void *slint_skia_engine_compile(void *engine, const char *source, const char *path);

/**
 * `slint_skia_engine_compile` returns the one definition itself, so the
 * "list" it enumerates is that definition: count 1, name at index 0.
 */
uintptr_t slint_skia_definitions_count(void *definition);

/**
 * Caller frees with [slint_skia_string_free]; null for a bad index.
 */
char *slint_skia_definitions_name(void *definition, uintptr_t index);

/**
 * Frees what [slint_skia_engine_compile] returned.
 */
void slint_skia_definitions_free(void *definition);

/**
 * Instantiates the component in a window of its own: size 0x0 and no GPU
 * surface until an attach call.
 */
void *slint_skia_instantiate(void *definition);

void slint_skia_instance_free(void *instance);

/**
 * Sizes the window in logical pixels (the scale factor stays 1, so logical
 * == physical). The attach calls size the window to their texture already;
 * this drives a component that has none.
 */
bool slint_skia_instance_set_size(void *instance, float width, float height);

/**
 * Renders a frame into the attached surface if the scene changed.
 * True: a frame was rendered and finished on the GPU (tell Flutter). False
 * with no error ([slint_skia_last_error] null): nothing changed. False with
 * an error: no surface attached, or rendering failed.
 */
bool slint_skia_instance_render(void *instance);

/**
 * Drops the attached surface and what it rendered into. Rendering fails
 * until the next attach.
 */
bool slint_skia_instance_detach(void *instance);

#if defined(__APPLE__)
/**
 * Apple: renders into `texture`, an `id<MTLTexture>` (BGRA8Unorm,
 * `width`x`height`, render-target usage) created on `device`, with
 * commands on `queue`, and sizes the window to it. Skia retains the three
 * objects; the plugin keeps the texture's backing (its `CVMetalTexture`)
 * alive until the next attach, detach or free.
 */
bool slint_skia_instance_attach_metal(void *instance,
                                      void *device,
                                      void *queue,
                                      void *texture,
                                      uint32_t width,
                                      uint32_t height);
#endif

#if defined(__ANDROID__)
/**
 * Android: renders into `window`, an `ANativeWindow*` from
 * `SlintSkiaNative.nativeWindowFromSurface` (one acquired reference, which
 * this call takes over, also when it fails), through Slint's own GL (EGL)
 * surface, and sizes the window to `width`x`height`. Flutter composites
 * the queued buffers itself.
 */
bool slint_skia_instance_attach_android(void *instance,
                                        void *window,
                                        uint32_t width,
                                        uint32_t height);
#endif

#if defined(_WIN32)
/**
 * Windows: creates a D3D12 device on the adapter with this LUID (Flutter's;
 * 0/0 = the first adapter) and a shared BGRA8 texture of
 * `width`x`height`, renders into it, and sizes the window. Returns the
 * texture's NT shared handle for the plugin's `GpuSurfaceTexture`, valid
 * until the next attach, detach or free; null on error.
 */
void *slint_skia_instance_attach_d3d(void *instance,
                                     uint32_t luid_low,
                                     int32_t luid_high,
                                     uint32_t width,
                                     uint32_t height);
#endif

#if defined(__linux__)
/**
 * Linux: renders offscreen through a headless EGL (GLES) context, reads
 * each frame back (see [slint_skia_instance_pixels]), and sizes the window
 * to `width`x`height`.
 */
bool slint_skia_instance_attach_gl(void *instance, uint32_t width, uint32_t height);
#endif

#if defined(__linux__)
/**
 * Linux: the last rendered frame, RGBA8888 premultiplied, `*len` =
 * width*height*4 bytes. Borrowed: valid until the next render, attach,
 * detach or free. Null (error set) before the first frame.
 */
const uint8_t *slint_skia_instance_pixels(void *instance, uintptr_t *len);
#endif

/**
 * kind: 0 move, 1 down, 2 up, 3 scroll, 4 exit; button: 0 none, 1 left,
 * 2 right, 3 middle (see `slint_dart_core::events`). False (error set) for
 * an unknown kind or a press/release without a button.
 */
bool slint_skia_instance_pointer_event(void *instance,
                                       uint8_t kind,
                                       float x,
                                       float y,
                                       uint8_t button,
                                       float dx,
                                       float dy);

bool slint_skia_instance_key_event(void *instance, const char *text, bool pressed);

/**
 * Caller frees with [slint_skia_string_free].
 */
char *slint_skia_instance_get_property(void *instance, const char *name);

bool slint_skia_instance_set_property(void *instance, const char *name, const char *value_json);

/**
 * Caller frees with [slint_skia_string_free].
 */
char *slint_skia_instance_invoke(void *instance, const char *name, const char *args_json);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* SLINT_SKIA_FFI_H */